manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imdb-mongodb
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
