manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: imdb-mongodb
    app.kubernetes.io/instance: imdb-mongodb
  name: imdb-mongodb-ingress
  namespace: imdb-mongodb
spec:
  rules:
    - host: imdb-mongodb.dec96de7-e7f9-4b06-9f21-2e0f053e0bfd.k8s.civo.com
      http:
        paths:
          -
            backend:
              service:
                name: imdb-mongodb
                port:
                  number: 4000
            path: /
            pathType: "Prefix"
